change image type and fix typos

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 			<div class="content">
 				<h2>Planning the project</h2>
 				<p>Explain how we used tickets on the Trello board to plan our work.</p>
-				<p>Show ho we move the tickets to keep track of our progress.</p>
+				<p>Show how we move the tickets to keep track of our progress.</p>
 			</div>
 			<div class="image">
 				<img src="images/spotlight02.jpg" alt="" />
@@ -106,7 +106,7 @@
 				<p>Put links to Amazon so if anyone wants to copy they can get the parts</p>
 			</div>
 			<div class="image">
-				<img src="images/work/01_wiring.png" alt="" />
+				<img src="images/work/01_wiring.jpg" alt="" />
 			</div>
 		</section>
 
@@ -126,8 +126,8 @@
 		<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 			<div class="content">
 				<h2>Writing the Python code</h2>
-				<p>Explain about the progra we wrote.</p>
-				<p>Explain how the data gets to this server</p>
+				<p>Explain about the program we wrote.</p>
+				<p>Explain how the data gets to this server.</p>
 			</div>
 			<div class="image">
 				<img src="images/spotlight02.jpg" alt="" />
@@ -143,7 +143,7 @@
 					<li><a href="https://www.instagram.com/imnorton1/" target="_imsta"
 							class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul>
-				<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+				<p>&copy; imnorton.com 2019. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 			</div>
 		</footer>
 
